# hypre-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
examples/: simple-cg.rs
hypre-sys/: Cargo.toml  build.rs  wrapper.h
hypre-sys/src/: lib.rs
src/: error.rs  lib.rs  matrix.rs  solver.rs  utils.rs  vector.rs
src/solvers/: boomer_amg.rs  cg.rs  config.rs  mod.rs
src/solvers/boomer_amg/: configuration.rs  mod.rs  solver.rs
